# narui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build.yml
examples/: blur.rs  circle_bench.rs  clipping.rs  clock.rs  counter.rs  minimal.rs  minimal_delta.rs  node_graph.rs  removal.rs  renderobject_delta.rs  slider.rs  stopwatch.rs  text_alpha_test.rs
freelist/: CHANGELOG.md  Cargo.toml
freelist/src/: lib.rs
narui_core/: CHANGELOG.md  Cargo.toml
narui_core/src/: lib.rs  re_export.rs
narui_core/src/context/: args.rs  context.rs  key.rs  mod.rs  patched_tree.rs
narui_core/src/eval/: delta_eval.rs  fragment.rs  layout.rs  mod.rs
narui_core/src/hooks/: after_frame.rs  effect.rs  listenable.rs  measure.rs  mod.rs  thread.rs
narui_core/src/util/: all_eq.rs  geom.rs  mod.rs
narui_core/src/vulkano_render/: frame_pacing.rs  glyph_brush.rs  input_handler.rs  lyon.rs  lyon_render.rs  mod.rs  primitive_renderer.rs  raw_render.rs  render.rs  renderer.rs  subpass_stack.rs  text_render.rs  vk_util.rs
narui_macros/: CHANGELOG.md  Cargo.toml
narui_macros/src/: kw_arg_macro.rs  lib.rs  rsx_macro.rs  widget_macro.rs
narui_widgets/: CHANGELOG.md  Cargo.toml
narui_widgets/src/: controls.rs  fragment.rs  input.rs  layout.rs  lib.rs  rect.rs  subpass.rs  text.rs  theme.rs
rutter_layout/: CHANGELOG.md  Cargo.toml
rutter_layout/src/: basic.rs  layouter.rs  lib.rs  main.rs  smoke_test.rs  stack.rs  types.rs
rutter_layout/src/flex/: column.rs  mod.rs  row.rs
rutter_layout/src/layouts/: basic.rs  mod.rs  stack.rs
rutter_layout/src/layouts/flex/: column.rs  mod.rs  row.rs
rutter_layout/src/util/: bimap.rs  mod.rs  vec_with_holes.rs
src/: api.rs  devtools_proto.py  hooks.rs  input.rs  layout.rs  lib.rs  main.rs  render.rs  theme.rs  types.rs  widgets.rs
src/heart/: all_eq.rs  context.rs  context_mod.rs  delta_eval.rs  fps_report.rs  fragment.rs  hooks.rs  key.rs  layout.rs  mod.rs  owning_ref.rs  state.rs  style.rs  types.rs  widget.rs
src/hooks/: after_frame.rs  args.rs  args_hook.rs  effect.rs  listenable.rs  measure.rs  memoize.rs  mod.rs  thread.rs
src/util/: format_helpers.rs  mod.rs
src/vulkano_render/: input_handler.rs  lyon_render.rs  mod.rs  raw_render.rs  text_render.rs  util.rs
src/widgets/: controls.rs  fragment.rs  high_level.rs  input.rs  layout.rs  mod.rs  rect.rs  shapes.rs  text.rs
