[package]
name = "narui"
version = "0.1.0"
authors = ["Jaro Habiger <jarohabiger@googlemail.com>"]
edition = "2018"

[lib]
name = "narui"

[dependencies]
narui_core = { path = "narui_core" }
narui_macros = { path = "narui_macros" }
rutter_layout = { path = "rutter_layout" }
narui_widgets = { path = "narui_widgets" }

[dev-dependencies]
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-check"]

[workspace]
members = [
    "narui_core",
    "narui_macros",
    "narui_widgets",
    "rutter_layout",
    "freelist",
]

[features]
debug_bounds = ["narui_core/debug_bounds"]

[profile.release]
lto = "fat"
debug = true
