[package]
name = "narui"
version = "0.1.0"
authors = ["Jaro Habiger <jarohabiger@googlemail.com>", "Robin Ole Heinemann <robin.ole.heinemann@gmail.com>"]
description = "A react-inspired UI library for building multimedia desktop apps with rust and vulkan."
repository = "https://github.com/apertus-open-source-cinema/narui/"
license = "MIT OR Apache-2.0"
keywords = ["graphics", "vulkan", "ui", "gui", "react", "flutter"]
categories = ["gui"]
readme = "README.md"
edition = "2018"

[lib]
name = "narui"

[dependencies]
narui_core = { path = "narui_core", version ="^0.1.0"}
narui_macros = { path = "narui_macros", version ="^0.1.0"}
rutter_layout = { path = "rutter_layout", version ="^0.1.0"}
narui_widgets = { path = "narui_widgets", version ="^0.1.0"}

[dev-dependencies]
log = "0.4.14"
env_logger = "0.9.0"

[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-check"]

[workspace]
members = [
    "narui_core",
    "narui_macros",
    "narui_widgets",
    "rutter_layout",
    "freelist",
]

[features]
debug_bounds = ["narui_core/debug_bounds"]

[profile.release]
lto = "fat"
debug = true
