[package]
name = "freelist"
description = "freelist datastructure implementation providing unsafe access to backing storage"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@gmail.com>"]
repository = "https://github.com/apertus-open-source-cinema/narui/"
license = "MIT OR Apache-2.0"
edition = "2018"
