[package]
name = "narui_core"
description = "unwrapped core crate of the narui gui framework"
version = "0.1.0"
authors = ["Jaro Habiger <jarohabiger@googlemail.com>", "Robin Ole Heinemann <robin.ole.heinemann@gmail.com>"]
repository = "https://github.com/apertus-open-source-cinema/narui/"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "narui_core"

[features]
default = []
debug_bounds = []

[dependencies]
rutter_layout = { path = "../rutter_layout" }
freelist = { path = "../freelist" }

lyon = "0.17.10"
winit = "0.25.0"
anyhow = "1.0.45"
lazy_static = "1.4.0"
vulkano = "0.26.0"
vulkano-shaders = "0.26.0"
vulkano-win = "0.26.0"
derivative = "2.2.0"
glyph_brush = "0.7.3"
notosans = "0.1.0"
palette = "0.6.0"
hashbrown = "0.11.2"
parking_lot = "0.11.2"
dashmap = "4.0.2"
ctor = "0.1.21"
ahash = "0.7.6"
log = "0.4.14"
ordered-float = "2.8.0"
smallvec = "1.7.0"
take_mut = "0.2.2"
tinyset = { version = "0.4.6", default-features = false }
crevice = "0.8.0"
