[package]
name = "narui_macros"
version = "0.1.0"
authors = ["Jaro Habiger <jarohabiger@googlemail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn-rsx = "0.8.0"
quote = "1.0.9"
proc-macro2 = { version = "1.0.26", features = ["span-locations"] }
syn = { version = "1.0.68", features = ["full"] }
bind_match = "0.1.2"
uuid = { version = "0.8.2", features = ["v4"] }
