[package]
name = "narui_macros"
description = "proc macros of the narui gui framework"
version = "0.1.0"
authors = ["Jaro Habiger <jarohabiger@googlemail.com>", "Robin Ole Heinemann <robin.ole.heinemann@gmail.com>"]
repository = "https://github.com/apertus-open-source-cinema/narui/"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn-rsx = "0.8.0"
quote = "1.0.9"
proc-macro2 = { version = "1.0.29", features = ["span-locations"] }
syn = { version = "1.0.75", features = ["full"] }
bind_match = "0.1.2"
proc-macro-crate = "1.0.0"
proc-macro-error = "1.0.4"
regex = "1.4.6"
