[package]
name = "rutter_layout"
description = "the flutter layout algorithm ported to rust"
version = "0.1.0"
authors = ["Robin Ole Heinemann <robin.ole.heinemann@gmail.com>", "Jaro Habiger <jarohabiger@googlemail.com>"]
repository = "https://github.com/apertus-open-source-cinema/narui/"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
freelist = { path = "../freelist", version = "0.1.0" }

derivative = "2.2.0"
log = "0.4.14"
